src/objects/Bill_Note__x.object
<CustomObject>
    <description>Heroku Postgres Table - uat$Billnote</description>
    <externalDataSource>Heroku_Postgres</externalDataSource>
    <externalName>uat$Bill_Note</externalName>
    <fields>
        <fullName>Replacement_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>is_replacement_bill</externalDeveloperName>
        <label>Replacement Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>account_number__c</fullName>
        <description>account_number</description>
        <externalDeveloperName>account_number</externalDeveloperName>
        <label>Contract</label>
        <length>30</length>
        <referenceTargetField>Contract.V10_Account_No__c</referenceTargetField>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Bill Notes</relationshipLabel>
        <relationshipName>Bill_Notes</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>bill_date__c</fullName>
        <description>bill_date</description>
        <externalDeveloperName>bill_date</externalDeveloperName>
        <label>Billing Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>bill_demand__c</fullName>
        <description>bill_demand</description>
        <externalDeveloperName>bill_demand</externalDeveloperName>
        <label>Billed Demand</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bill_number__c</fullName>
        <description>bill_number</description>
        <externalDeveloperName>bill_number</externalDeveloperName>
        <label>Bill Reference Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bill_status__c</fullName>
        <description>bill_status</description>
        <externalDeveloperName>bill_status</externalDeveloperName>
        <label>Bill Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bill_status_filter__c</fullName>
        <description>bill_status_filter</description>
        <externalDeveloperName>bill_status_filter</externalDeveloperName>
        <label>bill_status_filter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bill_type__c</fullName>
        <description>bill_type</description>
        <externalDeveloperName>bill_type</externalDeveloperName>
        <label>Bill Type</label>
        <length>100</length>
        <referenceTargetField>Code_Lookup__c.Code__c</referenceTargetField>
        <referenceTo>Code_Lookup__c</referenceTo>
        <relationshipLabel>Bill Notes</relationshipLabel>
        <relationshipName>Bill_Notes</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>bill_type_filter__c</fullName>
        <description>bill_type_filter</description>
        <externalDeveloperName>bill_type_filter</externalDeveloperName>
        <label>bill_type_filter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bill_usage__c</fullName>
        <description>bill_usage</description>
        <externalDeveloperName>bill_usage</externalDeveloperName>
        <label>kWh Consumption</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>billing_type__c</fullName>
        <description>billing_type</description>
        <externalDeveloperName>billing_type</externalDeveloperName>
        <label>Replacement Bill Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collection_status__c</fullName>
        <description>collection_status</description>
        <externalDeveloperName>collection_status</externalDeveloperName>
        <label>Collection Status</label>
        <length>100</length>
        <referenceTargetField>Code_Lookup__c.Code__c</referenceTargetField>
        <referenceTo>Code_Lookup__c</referenceTo>
        <relationshipLabel>Bill Notes</relationshipLabel>
        <relationshipName>Bill_Notes2</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>cwt_amount__c</fullName>
        <description>cwt_amount</description>
        <externalDeveloperName>cwt_amount</externalDeveloperName>
        <label>CWT Amount (PHP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>document_id__c</fullName>
        <description>document_id</description>
        <externalDeveloperName>document_id</externalDeveloperName>
        <label>document_id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>due_date__c</fullName>
        <description>due_date</description>
        <externalDeveloperName>due_date</externalDeveloperName>
        <label>Bill Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>fwv_amount__c</fullName>
        <description>fwv_amount</description>
        <externalDeveloperName>fwv_amount</externalDeveloperName>
        <label>FWV Amount (PHP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gen_date__c</fullName>
        <description>gen_date</description>
        <externalDeveloperName>gen_date</externalDeveloperName>
        <label>Bill Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>Billing Name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoice_date__c</fullName>
        <description>invoice_date</description>
        <externalDeveloperName>invoice_date</externalDeveloperName>
        <label>Bill Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>invoice_id__c</fullName>
        <description>invoice_id</description>
        <externalDeveloperName>invoice_id</externalDeveloperName>
        <label>invoice_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>invoice_number__c</fullName>
        <description>invoice_number</description>
        <externalDeveloperName>invoice_number</externalDeveloperName>
        <label>Invoice No.</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_placement__c</fullName>
        <description>is_placement</description>
        <externalDeveloperName>is_placement</externalDeveloperName>
        <label>is_placement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_under_complaint__c</fullName>
        <defaultValue>false</defaultValue>
        <description>is_under_complaint</description>
        <externalDeveloperName>is_under_complaint</externalDeveloperName>
        <label>Pending Complaint</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>last_bill_date__c</fullName>
        <description>last_bill_date</description>
        <externalDeveloperName>last_bill_date</externalDeveloperName>
        <label>Billing Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pending_amount__c</fullName>
        <description>pending_amount</description>
        <externalDeveloperName>pending_amount</externalDeveloperName>
        <label>Unpaid Amount (PHP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>service_number__c</fullName>
        <description>service_number</description>
        <externalDeveloperName>service_number</externalDeveloperName>
        <label>Service</label>
        <length>30</length>
        <referenceTargetField>Agreement__c.SIN__c</referenceTargetField>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Bill Notes</relationshipLabel>
        <relationshipName>Bill_Notes</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>total_amount__c</fullName>
        <description>total_amount</description>
        <externalDeveloperName>total_amount</externalDeveloperName>
        <label>Bill Total Amount (PHP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Bill Note</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>id__c</columns>
        <columns>last_bill_date__c</columns>
        <columns>bill_date__c</columns>
        <columns>gen_date__c</columns>
        <columns>bill_status__c</columns>
        <columns>total_amount__c</columns>
        <columns>bill_type__c</columns>
        <columns>service_number__c</columns>
        <columns>account_number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Bill Notes</pluralLabel>
</CustomObject>